--- a/templates/register.html
+++ b/templates/register.html
@@ -18,7 +18,7 @@
 <main class="mb-4">
     <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
-            <div class="col-md-10 col-lg-8 col-xl-7">
+            <div class="col-lg-8 col-xl-7">
                 <h2>Sign up</h2>
                 <div class="my-5">
                     <form class="row g-3" method="POST" action="{{ url_for('register') }}" novalidate>
@@ -31,34 +31,34 @@
                             {% for error in form.name.errors %}
                             <span style="color: red"> {{ error }}</span>
                             {% endfor %}
-                            <div class="col-md-8">
-                                {{ form.email.label(class="form-label") }}
-                                <div class="input-group">
-                                    {{ form.email(class="form-control") }}
-                                </div>
-                                {% for error in form.email.errors %}
-                                <span style="color: red"> {{ error }}</span>
-                                {% endfor %}
+                        </div>
+                        <div class="col-md-8">
+                            {{ form.email.label(class="form-label") }}
+                            <div class="input-group">
+                                {{ form.email(class="form-control") }}
                             </div>
-                            <div class="col-md-8">
-                                {{ form.password.label(class="form-label") }}
-                                <div class="input-group">
-                                    {{ form.password(class="form-control") }}
-                                </div>
-                                {% for error in form.password.errors %}
-                                <span style="color: red">{{ error }}</span>
-                                {% endfor %}
+                            {% for error in form.email.errors %}
+                            <span style="color: red"> {{ error }}</span>
+                            {% endfor %}
+                        </div>
+                        <div class="col-md-8">
+                            {{ form.password.label(class="form-label") }}
+                            <div class="input-group">
+                                {{ form.password(class="form-control") }}
                             </div>
-                            <div class="col-md-8 mt-3">
-                                {{ form.agree(class="form-check-input ", type="checkbox", id="flexCheckChecked") }}
-                                {{ form.agree.label(class="form-check-label", for="flexCheckChecked") }}
-                            </div>
-                            {% for error in form.agree.errors %}
+                            {% for error in form.password.errors %}
                             <span style="color: red">{{ error }}</span>
                             {% endfor %}
-                            <div class="col-12 mt-3">
-                                {{ form.signup(class="btn btn-primary") }}
-                            </div>
+                        </div>
+                        <div class="col-md-8 mt-3">
+                            {{ form.agree(class="form-check-input ", type="checkbox", id="flexCheckChecked") }}
+                            {{ form.agree.label(class="form-check-label", for="flexCheckChecked") }}
+                        </div>
+                        {% for error in form.agree.errors %}
+                        <span style="color: red">{{ error }}</span>
+                        {% endfor %}
+                        <div class="col-12 mt-3">
+                            {{ form.signup(class="btn btn-primary") }}
                         </div>
                     </form>
                 </div>
